Corriger les erreurs de SonarQube